Added the giant basilisk spritesheet. that also prevents errors during compression

--- a/res/spritesheets.properties
+++ b/res/spritesheets.properties
@@ -30,6 +30,9 @@ atcs.spritesheet.monsters_eye2.category=monster
 atcs.spritesheet.monsters_eye3.category=monster
 atcs.spritesheet.monsters_eye4.category=monster
 atcs.spritesheet.monsters_ghost1.category=monster
+atcs.spritesheet.monsters_giantbasilisk.category=monster
+atcs.spritesheet.monsters_giantbasilisk.sizex=64
+atcs.spritesheet.monsters_giantbasilisk.sizey=64
 atcs.spritesheet.monsters_hydra1.category=monster
 atcs.spritesheet.monsters_hydra1.sizex=64
 atcs.spritesheet.monsters_hydra1.sizey=64
