--- a/res/spritesheets.properties
+++ b/res/spritesheets.properties
@@ -20,6 +20,7 @@ atcs.spritesheet.items_misc_4.category=item
 atcs.spritesheet.items_misc_5.category=item
 atcs.spritesheet.items_misc_6.category=item
 atcs.spritesheet.items_reterski_1.category=item
+atcs.spritesheet.items_rijackson_1.category=item
 atcs.spritesheet.items_tometik1.category=item
 atcs.spritesheet.items_tometik2.category=item
 atcs.spritesheet.items_tometik3.category=item
@@ -72,6 +73,7 @@ atcs.spritesheet.monsters_tometik7.category=monster
 atcs.spritesheet.monsters_tometik8.category=monster
 atcs.spritesheet.monsters_tometik9.category=monster
 atcs.spritesheet.monsters_tometik10.category=monster
+atcs.spritesheet.monsters_gisons.category=monster
 atcs.spritesheet.monsters_demon1.category=monster
 atcs.spritesheet.monsters_demon1.sizex=64
 atcs.spritesheet.monsters_demon1.sizey=64
