--- a/res/spritesheets.properties
+++ b/res/spritesheets.properties
@@ -83,6 +83,9 @@ atcs.spritesheet.monsters_demon2.sizey=64
 atcs.spritesheet.monsters_cyclops.category=monster
 atcs.spritesheet.monsters_cyclops.sizex=64
 atcs.spritesheet.monsters_cyclops.sizey=96
+atcs.spritesheet.monsters_bosses_2x2.category=monster
+atcs.spritesheet.monsters_bosses_2x2.sizex=64
+atcs.spritesheet.monsters_bosses_2x2.sizey=64
 atcs.spritesheet.effect_blood3.animate=true
 atcs.spritesheet.effect_blood4.animate=true
 atcs.spritesheet.effect_bluetentacle.animate=true
