Sprites sorted Missing sprites added (actorconditions, items, monster, effect) monsters_warrior1 too much
monsters_arulir   makes ATCS crash??

and I omitted fatboy73 this time, because the png has so many holes that would be in ATCS at the beginning of NPCs

--- a/res/spritesheets.properties
+++ b/res/spritesheets.properties
@@ -3,6 +3,16 @@ atcs.spritesheet.actorconditions_2.category=actorcondition
 atcs.spritesheet.actorconditions_japozero.category=actorcondition
 atcs.spritesheet.actorconditions_omi1.category=actorcondition
 atcs.spritesheet.actorconditions_omi2.category=actorcondition
+
+atcs.spritesheet.effect_blood3.animate=true
+atcs.spritesheet.effect_blood4.animate=true
+atcs.spritesheet.effect_bluetentacle.animate=true
+atcs.spritesheet.effect_heal2.animate=true
+atcs.spritesheet.effect_miss1.animate=true
+atcs.spritesheet.effect_poison1.animate=true
+atcs.spritesheet.effect_tometik1.animate=true
+atcs.spritesheet.effect_tometik2.animate=true
+
 atcs.spritesheet.items_armours.category=item
 atcs.spritesheet.items_armours_2.category=item
 atcs.spritesheet.items_armours_3.category=item
@@ -30,14 +40,15 @@ atcs.spritesheet.items_tometik3.category=item
 atcs.spritesheet.items_weapons.category=item
 atcs.spritesheet.items_weapons_2.category=item
 atcs.spritesheet.items_weapons_3.category=item
+
 atcs.spritesheet.monsters_armor1.category=monster
-atcs.spritesheet.monsters_arulirs.category=monster
+
 atcs.spritesheet.monsters_dogs.category=monster
 atcs.spritesheet.monsters_eye1.category=monster
 atcs.spritesheet.monsters_eye2.category=monster
 atcs.spritesheet.monsters_eye3.category=monster
 atcs.spritesheet.monsters_eye4.category=monster
-atcs.spritesheet.monsters_fatboy73.category=monster
+
 atcs.spritesheet.monsters_ghost1.category=monster
 atcs.spritesheet.monsters_gisons.category=monster
 atcs.spritesheet.monsters_guynmart.category=monster
@@ -68,6 +79,7 @@ atcs.spritesheet.monsters_skeleton1.category=monster
 atcs.spritesheet.monsters_skeleton2.category=monster
 atcs.spritesheet.monsters_snakes.category=monster
 atcs.spritesheet.monsters_tometik1.category=monster
+atcs.spritesheet.monsters_tometik10.category=monster
 atcs.spritesheet.monsters_tometik2.category=monster
 atcs.spritesheet.monsters_tometik3.category=monster
 atcs.spritesheet.monsters_tometik4.category=monster
@@ -76,11 +88,12 @@ atcs.spritesheet.monsters_tometik6.category=monster
 atcs.spritesheet.monsters_tometik7.category=monster
 atcs.spritesheet.monsters_tometik8.category=monster
 atcs.spritesheet.monsters_tometik9.category=monster
-atcs.spritesheet.monsters_tometik10.category=monster
+atcs.spritesheet.monsters_warrior1.category=monster
 atcs.spritesheet.monsters_unknown.category=monster
 atcs.spritesheet.monsters_wraiths.category=monster
 atcs.spritesheet.monsters_zombie1.category=monster
 atcs.spritesheet.monsters_zombie2.category=monster
+
 atcs.spritesheet.monsters_bosses_2x2.category=monster
 atcs.spritesheet.monsters_bosses_2x2.sizex=64
 atcs.spritesheet.monsters_bosses_2x2.sizey=64
@@ -99,11 +112,3 @@ atcs.spritesheet.monsters_giantbasilisk.sizey=64
 atcs.spritesheet.monsters_hydra1.category=monster
 atcs.spritesheet.monsters_hydra1.sizex=64
 atcs.spritesheet.monsters_hydra1.sizey=64
-atcs.spritesheet.effect_blood3.animate=true
-atcs.spritesheet.effect_blood4.animate=true
-atcs.spritesheet.effect_bluetentacle.animate=true
-atcs.spritesheet.effect_heal2.animate=true
-atcs.spritesheet.effect_miss1.animate=true
-atcs.spritesheet.effect_poison1.animate=true
-atcs.spritesheet.effect_tometik1.animate=true
-atcs.spritesheet.effect_tometik2.animate=true
