--- a/res/spritesheets.properties
+++ b/res/spritesheets.properties
@@ -30,6 +30,7 @@ atcs.spritesheet.items_misc_4.category=item
 atcs.spritesheet.items_misc_5.category=item
 atcs.spritesheet.items_misc_6.category=item
 atcs.spritesheet.items_necklaces_1.category=item
+atcs.spritesheet.items_omgeeky.category=item
 atcs.spritesheet.items_omi2.category=item
 atcs.spritesheet.items_reterski_1.category=item
 atcs.spritesheet.items_rijackson_1.category=item
@@ -42,6 +43,7 @@ atcs.spritesheet.items_weapons_2.category=item
 atcs.spritesheet.items_weapons_3.category=item
 
 atcs.spritesheet.monsters_armor1.category=monster
+atcs.spritesheet.monsters_arulirs.category=monster
 
 atcs.spritesheet.monsters_dogs.category=monster
 atcs.spritesheet.monsters_eye1.category=monster
@@ -49,6 +51,7 @@ atcs.spritesheet.monsters_eye2.category=monster
 atcs.spritesheet.monsters_eye3.category=monster
 atcs.spritesheet.monsters_eye4.category=monster
 
+atcs.spritesheet.monsters_fatboy73.category=monster
 atcs.spritesheet.monsters_ghost1.category=monster
 atcs.spritesheet.monsters_gisons.category=monster
 atcs.spritesheet.monsters_guynmart.category=monster
