new Sprites (engine PR 59)

--- a/res/spritesheets.properties
+++ b/res/spritesheets.properties
@@ -30,6 +30,7 @@ atcs.spritesheet.items_misc_4.category=item
 atcs.spritesheet.items_misc_5.category=item
 atcs.spritesheet.items_misc_6.category=item
 atcs.spritesheet.items_necklaces_1.category=item
+atcs.spritesheet.items_newb.category=item
 atcs.spritesheet.items_omgeeky.category=item
 atcs.spritesheet.items_omi2.category=item
 atcs.spritesheet.items_phoenix01.category=item
@@ -70,6 +71,7 @@ atcs.spritesheet.monsters_man1.category=monster
 atcs.spritesheet.monsters_men.category=monster
 atcs.spritesheet.monsters_men2.category=monster
 atcs.spritesheet.monsters_misc.category=monster
+atcs.spritesheet.monsters_newb_1.category=monster
 atcs.spritesheet.monsters_omi1.category=monster
 atcs.spritesheet.monsters_omi1_b.category=monster
 atcs.spritesheet.monsters_omi2.category=monster
@@ -118,3 +120,12 @@ atcs.spritesheet.monsters_giantbasilisk.sizey=64
 atcs.spritesheet.monsters_hydra1.category=monster
 atcs.spritesheet.monsters_hydra1.sizex=64
 atcs.spritesheet.monsters_hydra1.sizey=64
+atcs.spritesheet.monsters_newb_2.category=monster
+atcs.spritesheet.monsters_newb_2.sizex=64
+atcs.spritesheet.monsters_newb_2.sizey=32
+atcs.spritesheet.monsters_newb_3.category=monster
+atcs.spritesheet.monsters_newb_3.sizex=64
+atcs.spritesheet.monsters_newb_3.sizey=64
+atcs.spritesheet.monsters_newb_4.category=monster
+atcs.spritesheet.monsters_newb_4.sizex=32
+atcs.spritesheet.monsters_newb_4.sizey=64
