new cats sprite

--- a/res/spritesheets.properties
+++ b/res/spritesheets.properties
@@ -47,6 +47,7 @@ atcs.spritesheet.items_weapons_3.category=item
 atcs.spritesheet.monsters_armor1.category=monster
 atcs.spritesheet.monsters_arulirs.category=monster
 
+atcs.spritesheet.monsters_cats.category=monster
 atcs.spritesheet.monsters_dogs.category=monster
 atcs.spritesheet.monsters_eye1.category=monster
 atcs.spritesheet.monsters_eye2.category=monster
