Update .gitignore to include /out and ATCS.jar, and adjust patterns for ATCS_v*.tar.gz

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 /Project
 /bin
 /packaging/tmp/
+/out
 packaging/common/lib
 packaging/common/ATCS.jar
 packaging/ATCS_*.zip
-/packaging/common/ATCS_v*.tar.gz
-/packaging/old.sh
+ATCS_v*.tar.gz
+ATCS.jar
