--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ packaging/common/ATCS.jar
 packaging/ATCS_*.zip
 ATCS_v*.tar.gz
 ATCS.jar
+/packaging/common/ATCS.env.bat
+/packaging/common/ATCS.env
