new spritesheets index

--- a/res/spritesheets.properties
+++ b/res/spritesheets.properties
@@ -1,6 +1,7 @@
 atcs.spritesheet.actorconditions_1.category=actorcondition
 atcs.spritesheet.actorconditions_2.category=actorcondition
 atcs.spritesheet.actorconditions_japozero.category=actorcondition
+atcs.spritesheet.actorconditions_newb.category=actorcondition
 atcs.spritesheet.actorconditions_omi1.category=actorcondition
 atcs.spritesheet.actorconditions_omi2.category=actorcondition
 
@@ -60,6 +61,7 @@ atcs.spritesheet.monsters_gisons.category=monster
 atcs.spritesheet.monsters_guynmart.category=monster
 
 atcs.spritesheet.monsters_insects.category=monster
+atcs.spritesheet.monsters_johny.category=monster
 atcs.spritesheet.monsters_karvis1.category=monster
 atcs.spritesheet.monsters_karvis2.category=monster
 atcs.spritesheet.monsters_ld1.category=monster
