--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,22 +23,33 @@ jobs:
     - name: Build JAR
       shell: bash
       run: |
-        cd ATCS/packaging
+        pwd
+        cd packaging
+        pwd
         chmod +x package.sh
         ./package.sh -windows
 
     - name: Create Installer
       shell: bash
       run: |
-        cd ATCS/packaging/Windows
+        pwd
+        cd packaging/Windows
+        pwd
+        ls -la
         makensis ATCS_Installer.nsi
+        echo "Checking installer artifacts:"
+        ls -la
 
     - name: Get Version
       id: get_version
       shell: bash
       run: |
-        VERSION=$(cat ATCS/packaging/ATCS_latest | sed 's/^v//')
+        echo "Reading version from file:"
+        cat packaging/ATCS_latest
+        VERSION=$(cat packaging/ATCS_latest | sed 's/^v//')
+        echo "Processed version: $VERSION"
         echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "Environment variable set to: $VERSION"
 
     - name: Upload ZIP to Release
       uses: actions/upload-release-asset@v1
@@ -46,7 +57,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./ATCS/packaging/ATCS_${{ env.VERSION }}.zip
+        asset_path: ./packaging/ATCS_${{ env.VERSION }}.zip
         asset_name: ATCS_${{ env.VERSION }}.zip
         asset_content_type: application/zip
 
@@ -56,6 +67,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./ATCS/packaging/Windows/ATCS_v${{ env.VERSION }}_Setup.exe
+        asset_path: ./packaging/Windows/ATCS_v${{ env.VERSION }}_Setup.exe
         asset_name: ATCS_v${{ env.VERSION }}_Setup.exe
         asset_content_type: application/octet-stream
