--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,18 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Get Version
+      id: get_version
+      shell: bash
+      run: |
+        pwd
+        echo "Reading version from file:"
+        cat packaging/ATCS_latest
+        VERSION=$(cat packaging/ATCS_latest | sed 's/^v//')
+        echo "Processed version: $VERSION"
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "Environment variable set to: $VERSION"
+
     - name: Set up JDK
       uses: actions/setup-java@v2
       with:
@@ -39,17 +51,6 @@ jobs:
         makensis ATCS_Installer.nsi
         echo "Checking installer artifacts:"
         ls -la
-
-    - name: Get Version
-      id: get_version
-      shell: bash
-      run: |
-        echo "Reading version from file:"
-        cat packaging/ATCS_latest
-        VERSION=$(cat packaging/ATCS_latest | sed 's/^v//')
-        echo "Processed version: $VERSION"
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
-        echo "Environment variable set to: $VERSION"
 
     - name: Upload ZIP to Release
       uses: actions/upload-release-asset@v1
