--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         echo "Reading version from file:"
         cat packaging/ATCS_latest
-        VERSION=$(cat packaging/ATCS_latest | sed 's/^v//' | sed 's/[^0-9.]//g')
+        VERSION=$(cat packaging/ATCS_latest)
         echo "Processed version: $VERSION"
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Environment variable set to: $VERSION"
@@ -30,6 +30,11 @@ jobs:
 
     - name: Install NSIS
       uses: joncloud/makensis-action@v4
+      env:
+        VERSION: ${{ env.VERSION }}
+      with:
+        script-file: packaging/Windows/ATCS_Installer.nsi
+        arguments: /DVERSION="${{ env.VERSION }}"
 
     - name: Build JAR
       shell: bash
@@ -39,18 +44,8 @@ jobs:
         echo "Building JAR and ZIP for version: ${{ env.VERSION }}"
         ./package.sh -windows
         echo "Created artifacts:"
-        ls -la ATCS_${{ env.VERSION }}.zip
         ls -la common/ATCS.jar
-
-    - name: Create Installer
-      shell: bash
-      run: |
-        cd packaging/Windows
-        ls -la
-        echo "Building installer for version: ${{ env.VERSION }}"
-        makensis /DVERSION="${{ env.VERSION }}" ATCS_Installer.nsi
-        echo "Created installer:"
-        ls -la ATCS_v${{ env.VERSION }}_Setup.exe
+        ls -la ATCS_${{ env.VERSION }}.zip
 
     - name: Upload ZIP to Release
       uses: actions/upload-release-asset@v1
@@ -68,6 +63,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./packaging/Windows/ATCS_v${{ env.VERSION }}_Setup.exe
-        asset_name: ATCS_v${{ env.VERSION }}_Setup.exe
+        asset_path: ./packaging/ATCS_${{ env.VERSION }}_Setup.exe
+        asset_name: ATCS_${{ env.VERSION }}_Setup.exe
         asset_content_type: application/octet-stream
