--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,22 +47,11 @@ jobs:
         script-file: packaging/Windows/ATCS_Installer.nsi
         arguments: /DVERSION="${{ env.VERSION }}"
 
-    - name: Upload ZIP to Release
-      uses: actions/upload-release-asset@v1
+    - name: Upload Release Assets
+      uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./packaging/ATCS_${{ env.VERSION }}.zip
-        asset_name: ATCS_${{ env.VERSION }}.zip
-        asset_content_type: application/zip
-
-    - name: Upload Installer to Release
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ./packaging/ATCS_${{ env.VERSION }}_Setup.exe
-        asset_name: ATCS_${{ env.VERSION }}_Setup.exe
-        asset_content_type: application/octet-stream
+        files: |
+          ./packaging/ATCS_${{ env.VERSION }}.zip
+          ./packaging/ATCS_${{ env.VERSION }}_Setup.exe
