Update release workflow to read version from the correct file path

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,8 +16,8 @@ jobs:
       shell: bash
       run: |
         echo "Reading version from file:"
-        cat packaging/ATCS_latest
-        VERSION=$(cat packaging/ATCS_latest)
+        cat res/ATCS_latest
+        VERSION=$(cat res/ATCS_latest)
         echo "Processed version: $VERSION"
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Environment variable set to: $VERSION"
