cleanup some packaging stuff

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,8 @@ jobs:
       run: |
         echo "Reading version from file:"
         cat packaging/ATCS_latest
-        VERSION=$(cat packaging/ATCS_latest)
+        echo ""
+        VERSION=$(tr -d '[:space:]' < "packaging/ATCS_latest")
         echo "Processed version: $VERSION"
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Environment variable set to: $VERSION"
@@ -26,7 +27,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '11'
-        distribution: 'adopt'
+        distribution: 'temurin'
 
     - name: Build JAR
       shell: bash
@@ -41,8 +42,6 @@ jobs:
 
     - name: Install NSIS
       uses: joncloud/makensis-action@v4
-      env:
-        VERSION: ${{ env.VERSION }}
       with:
         script-file: packaging/Windows/ATCS_Installer.nsi
         arguments: /DVERSION="${{ env.VERSION }}"
